--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "cppdbg",
             "request": "launch",
             "preLaunchTask": "C gcc",
-            "program": "${workspaceFolder}/output/linkedList.exe",
+            "program": "${workspaceFolder}/output/linkedListDoubly.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/output",
